--- a/Workshop Week 8.csproj
+++ b/Workshop Week 8.csproj
@@ -61,6 +61,15 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Compile Remove="Components\Pages\Calculator.razor.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="Components\Pages\Calculator.razor.cs" />
+      <Content Include="Components\Pages\ItemCard.razor.css" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.8" />
